JumpScript/tests/baselines/reference/alwaysStrict.errors.txt
tests/cases/compiler/alwaysStrict.jump(2,9): error TS1100: Invalid use of 'arguments' in strict mode.


==== tests/cases/compiler/alwaysStrict.jump (1 errors) ====
    function f() {
        var arguments = [];
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }